name:                Mowbius
version:             0.1.0.0
synopsis:            Mowbius coverage path planning
description:         Please see README.md
homepage:            https://github.com/blodow/Mowbius#readme
license:             BSD3
license-file:        LICENSE
author:              Nico Blodow
maintainer:          nicoblodow@gmail.com
copyright:           2016 Nico Blodow
category:            Robot
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mowbius
                     , Mowbius.Conversion
                     , Mowbius.Types
                     , Mowbius.Planner
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , clipper
                     , transformers
                     , random
                     , pretty-show
  default-language:    Haskell2010

executable Mowbius-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Mowbius
  default-language:    Haskell2010

test-suite Mowbius-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Mowbius
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blodow/Mowbius
